k8s/voucher-service-deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: voucher
spec:
  containers:
    - name: vouchers
      image: vouckerplatform/voucher-service:7c6dc6990a350f8cad61cf72816fec9a6a1b43ea
