k8s/category-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service-api
spec:
  selector:
    matchLabels:
      app: category-service-api
  replicas: 1
  template:
    metadata:
      labels:
        app: category-service-api
    spec:
      containers:
        - name: category-service-api
          image: category-service
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: category-service-api-svc
spec:
  selector:
    app: category-service-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
