k8s/inventory-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-api
spec:
  selector:
    matchLabels:
      app: inventory-service-api
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory-service-api
    spec:
      containers:
        - name: inventory-service-api
          image: vouckerplatform/inventory-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-api
spec:
  selector:
    app: inventory-service-api
  ports:
    - protocol: TCP
      port: 3000
  type: LoadBalancer
