k8s/location-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-service-api
spec:
  selector:
    matchLabels:
      app: location-service-api
  replicas: 1
  template:
    metadata:
      labels:
        app: location-service-api
    spec:
      containers:
        - name: location-service-api
          image: vouckerplatform/location-service:test
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: location-service-api-svc
spec:
  selector:
    app: location-service-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
