k8s/nginx-loadbalancer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadbalancer
spec:
  selector:
    matchLabels:
      app: loadbalancer
  replicas: 1
  template:
    metadata:
      labels:
        app: loadbalancer
    spec:
      containers:
        - name: loadbalancer
          image: vouckerplatform/loadbalancer
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
spec:
  selector:
    app: loadbalancer
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
