k8s/store-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service-api
spec:
  selector:
    matchLabels:
      app: store-service-api
  replicas: 1
  template:
    metadata:
      labels:
        app: store-service-api
    spec:
      containers:
        - name: store-service-api
          image: vouckerplatform/store-service:xxxx
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: store-service-api-svc
spec:
  selector:
    app: store-service-api
  ports:
    - protocol: TCP
      port: 3000
  type: ClusterIP
