k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-api
spec:
  rules:
    - http:
        paths:
          - path: /api/location
            pathType: Prefix
            backend:
              service:
                name: location-service-api-svc
                port:
                  number: 3000
          - path: /api/category
            pathType: Prefix
            backend:
              service:
                name: category-service-api-svc
                port:
                  number: 3000
          - path: /api/inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service-api-svc
                port:
                  number: 3000
